--- a/assets/style.css
+++ b/assets/style.css
@@ -45,6 +45,8 @@ h1{
 /* If I remove this width =100% from my .imagefamily class the image takes up the whole screen not just 100% of the div. If I put a percentage in here it stays in its div. I am unsure why it does that. */
 .imagefamily{
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .footcopy{
